# uv-shims

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  pip.rs  pip3.rs  py.rs  python.rs  python2.rs  python3.rs
